changed the view to render through shop_app

--- a/web3_project/templates/shop/base.html
+++ b/web3_project/templates/shop/base.html
@@ -21,13 +21,10 @@ Licence URI: http://www.os-templates.com/template-terms
 {#<link href="{% static "/css/base.css" %}" rel="stylesheet">#}
 <link href="{% static "/css/layout.css" %}" rel="stylesheet" type="text/css" media="all">
 </head>
+<!--TOPHEADER-->
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row0">
   <div id="topbar" class="hoc clear">
-    <!-- ################################################################################################ -->
     <div class="fl_left">
       <ul class="nospace">
         <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
@@ -43,34 +40,28 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="#">Register</a></li>
       </ul>
     </div>
-    <!-- ################################################################################################ -->
+   
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<!--TOPHEADER-->
+
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url({% static '/images/demo/backgrounds/01.png' %});">
-  <!-- ################################################################################################ -->
+{% block top_background_wrapper %}
+
+{% endblock %}
+<!-- End Top Background Image Wrapper --> 
+<!--HEADER-->
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
-      <!-- ################################################################################################ -->
+     
       <div id="logo" class="fl_left">
         <h1><a href="index.html">Shop</a></h1>
       </div>
-      <!-- ################################################################################################ -->
+ 
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a class="drop" href="#">Products</a>
-            <ul>
-              <li><a href="pages/gallery.html">Hardware</a></li>
-              <li><a href="pages/full-width.html">Laptops</a></li>
-              <li><a href="pages/sidebar-left.html">Instruments</a></li>
-              <li><a href="pages/sidebar-right.html">Consoles and TV</a></li>
-              <li><a href="pages/basic-grid.html">Other</a></li>
-            </ul>
-          </li>
+          <li><a class="active" href="products.html">Products</a> </li>
           <li><a class="drop" href="#">User</a>
             <ul>
               <li><a href="#">Level 2</a></li>
@@ -89,149 +80,16 @@ Licence URI: http://www.os-templates.com/template-terms
         </ul>
       </nav>
     </header>
-    <!-- ################################################################################################ -->
-    <div id="pageintro" class="hoc clear">
-      <article>
-        <h2 class="heading">Quisque aliquam erat efficitur laoreet</h2>
-        <p>Nam sed vehicula  aenean dictum nec erat vel finibus.</p>
-        <footer><a class="btn" href="#">Neque elit interdum</a></footer>
-      </article>
-    </div>
-    <!-- ################################################################################################ -->
-  </div>
-  <!-- ################################################################################################ -->
-</div>
-<!-- End Top Background Image Wrapper -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row3">
-  <main class="hoc container clear">
-    <!-- main body -->
-    <!-- ################################################################################################ -->
-    <article class="group btmspace-80">
-      <div class="one_half first"><img class="inspace-10 borderedbox" src="{% static 'images/demo/480x400.png' %}" alt=""></div>
-      <div class="one_half">
-        <p class="nospace font-xs">Suscipit viverra luctus sit</p>
-        <h3 class="heading">Amet diam nunc venenatis lacus</h3>
-        <p>Accumsan vestibulum nulla imperdiet dolor ut tempus ultricies nam sed posuere mi id molestie tortor quisque suscipit convallis ex in interdum tortor vestibulum ac phasellus.</p>
-        <blockquote>Viverra id felis a lacinia sed metus orci gravida non neque ut elementum facilisis est cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus quisque mollis nulla in quam</blockquote>
-        <p>Porttitor lacinia pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-        <footer><a href="#">Read More &raquo;</a></footer>
-      </div>
-    </article>
-    <!-- ################################################################################################ -->
-    <hr class="btmspace-80">
-    <!-- ################################################################################################ -->
-    <div class="center btmspace-80">
-      <h3 class="heading">Curabitur ac metus consequat</h3>
-      <p class="nospace">Rhoncus donec faucibus sit amet est ac porttitor integer aliquet dolor eros ac pretium odio.</p>
-    </div>
-    <ul class="nospace group cta">
-      <li class="one_third first">
-        <article><a href="#"><i class="fa fa-gamepad"></i></a>
-          <h6 class="heading">Nam at magna est</h6>
-          <p>Sed sodales mauris et egestas auctor neque ligula rhoncus enim id bibendum arcu massa phasellus&hellip;</p>
-          <footer><a href="#">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class="one_third">
-        <article><a href="#"><i class="fa fa-location-arrow"></i></a>
-          <h6 class="heading">Urna lectus praesent</h6>
-          <p>Pulvinar faucibus quam nec lacinia ut tincidunt nisi in euismod consequat donec ut ante tincidunt&hellip;</p>
-          <footer><a href="#">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class="one_third">
-        <article><a href="#"><i class="fa fa-subway"></i></a>
-          <h6 class="heading">Tempor lorem aliquet</h6>
-          <p>Leo cras tempus odio in suscipit tempus dolor dolor consequat diam sit amet ullamcorper est enim eu&hellip;</p>
-          <footer><a href="#">Read More &raquo;</a></footer>
-        </article>
-      </li>
-    </ul>
-    <!-- ################################################################################################ -->
-    <!-- / main body -->
-    <div class="clear"></div>
-  </main>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url({% static 'images/demo/backgrounds/02.png' %});">
-  <article class="hoc container clear">
-    <!-- ################################################################################################ -->
-    <div class="three_quarter first">
-      <h6 class="nospace">Metus augue porttitor sed</h6>
-      <p class="nospace">Lectus vitae rutrum auctor lectus pellentesque id pulvinar velit at porta leo</p>
-    </div>
-    <footer class="one_quarter"><a class="btn medium" href="#">More Information &raquo;</a></footer>
-    <!-- ################################################################################################ -->
-  </article>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<div class="wrapper row3">
-  <section class="hoc container clear">
-    <!-- ################################################################################################ -->
-    <div class="center btmspace-50">
-      <h3 class="font-x2 nospace">Turpis id ex pharetra</h3>
-      <p class="nospace">Imperdiet morbi elementum elit vel diam tincidunt finibus ac et est nullam vulputate</p>
-    </div>
-    <ul class="nospace group latest">
-      <li class="one_third first">
-        <article>
-          <figure><a href="#"><img src="{% static 'images/demo/320x220.png' %}" alt=""></a>
-            <figcaption class="group">
-              <time datetime="2045-04-06">6<sup>th</sup> April 2045</time>
-              <span>by <a href="#">Admin</a></span> </figcaption>
-          </figure>
-          <div class="postexcerpt">
-            <h4 class="heading">Vestibulum ut ac mattis</h4>
-            <p>Quisque consectetur nibh pharetra vitae id mattis eu tellus aliquam malesuada tempus pulvinar&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-      <li class="one_third">
-        <article>
-          <figure><a href="#"><img src="{% static 'images/demo/320x220.png' %}" alt=""></a>
-            <figcaption class="group">
-              <time datetime="2045-04-05">5<sup>th</sup> April 2045</time>
-              <span>by <a href="#">Admin</a></span> </figcaption>
-          </figure>
-          <div class="postexcerpt">
-            <h4 class="heading">Risus nulla varius sit</h4>
-            <p>Eget tincidunt neque in hac habitasse platea dictumst phasellus sollicitudin porta congue ut gravida&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-      <li class="one_third">
-        <article>
-          <figure><a href="#"><img src="{% static 'images/demo/320x220.png' %}" alt=""></a>
-            <figcaption class="group">
-              <time datetime="2045-04-04">4<sup>th</sup> April 2045</time>
-              <span>by <a href="#">Admin</a></span> </figcaption>
-          </figure>
-          <div class="postexcerpt">
-            <h4 class="heading">Amet est at elementum</h4>
-            <p>Dapibus duis eu arcu gravida gravida tellus sit amet rhoncus libero mauris ac dolor mattis tincidunt&hellip;</p>
-            <footer><a href="#">Read More &raquo;</a></footer>
-          </div>
-        </article>
-      </li>
-    </ul>
-    <!-- ################################################################################################ -->
-  </section>
-</div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<!--END HEADER-->
+
+{% block content %}  
+{% endblock %}
+   
+<!--FOOTER-->
+<!--FOOTER BACKGROUND IMAGE WRAPPER-->
 <div class="wrapper row4 bgded overlay" style="background-image:url({% static 'images/demo/backgrounds/03.png' %});">
   <footer id="footer" class="hoc clear">
-    <!-- ################################################################################################ -->
+ 
     <div class="one_quarter first">
       <h6 class="title">Cras eros malesuada</h6>
       <p>Ridiculus mus fusce nec odio ut libero vestibulum luctus quis tortor morbi vulputate tincidunt nisi eu aliquet sapien imperdiet suspendisse.</p>
@@ -280,23 +138,19 @@ Licence URI: http://www.os-templates.com/template-terms
         </li>
       </ul>
     </div>
-    <!-- ################################################################################################ -->
+   
   </footer>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+<!--END FOOTER-->
+
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear">
-    <!-- ################################################################################################ -->
     <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <!-- ################################################################################################ -->
+
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
 <script src="{% static '/scripts/jquery.min.js' %}"></script>
