added the current available views of product

--- a/web3_project/templates/shop/base.html
+++ b/web3_project/templates/shop/base.html
@@ -60,8 +60,8 @@ Licence URI: http://www.os-templates.com/template-terms
  
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a class="active" href="products.html">Products</a> </li>
+          <li class="active"><a href="">Home</a></li>
+          <li><a class="active" href="products">Products</a> </li>
           <li><a class="drop" href="#">User</a>
             <ul>
               <li><a href="#">Level 2</a></li>
