--- a/web3_project/templates/shop/products.html
+++ b/web3_project/templates/shop/products.html
@@ -17,27 +17,40 @@
   </div>
 </div>
 
+
+
 <div class="wrapper row3">
   <main class="hoc container clear"> 
+    <div id="category-sidebar">
+        <h3>Categories</h3>
+        <ul>
+            <li {% if not category %}class="selected"{% endif %}>
+                <a href="{% url "shop:product_list" %}">All</a>
+            </li>
+        {% for c in categories %}
+            <li {% if category.slug == c.slug %}class="selected"{% endif %}>
+                <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+            </li>
+        {% endfor %}
+        </ul>
+</div>
     
+
     <div class="content"> 
     
       <div id="gallery">
+        <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
         <figure>
-          <header class="heading">Products</header>
-          <ul class="nospace clear">
-            <li class="one_quarter first"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter first"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter first"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
-            <li class="one_quarter"><a href="#"><img src="{% static "/images/demo/gallery/01.png" %}" alt=""></a></li> 
+          <ul>
+          {%for product in products%}
+            <li class="one_quarter"><a href="{{ product.get_absolute_url }}">
+            <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static "img/no_image.png" %}{% endif %}">
+            </a>
+            <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br>
+                 ${{ product.price }}
+            </li> 
+          {%endfor %}
+            
           </ul>
           
         </figure>
@@ -46,16 +59,8 @@
       <nav class="pagination">
         <ul>
           <li><a href="#">&laquo; Previous</a></li>
-          <li><a href="#">1</a></li>
+          <li class="current"><strong>1</strong></li>
           <li><a href="#">2</a></li>
-          <li><strong>&hellip;</strong></li>
-          <li><a href="#">6</a></li>
-          <li class="current"><strong>7</strong></li>
-          <li><a href="#">8</a></li>
-          <li><a href="#">9</a></li>
-          <li><strong>&hellip;</strong></li>
-          <li><a href="#">14</a></li>
-          <li><a href="#">15</a></li>
           <li><a href="#">Next &raquo;</a></li>
         </ul>
       </nav>
