--- a/web3_project/templates/shop/products.html
+++ b/web3_project/templates/shop/products.html
@@ -10,8 +10,8 @@
   <div id="breadcrumb" class="hoc clear"> 
     
     <ul>
-      <li><a href="../">Home</a></li>
-      <li><a href="#">Products</a></li>
+      <li><a href="{% url 'shop:home' %}">Home</a></li>
+      <li><a href="{% url 'shop:product_list' %}">Products</a></li>
     </ul>
   
   </div>
