--- a/web3_project/templates/shop/base.html
+++ b/web3_project/templates/shop/base.html
@@ -33,11 +33,18 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
     <div class="fl_right">
       <ul class="nospace">
+        {% if user.is_authenticated %}
+        <li><a href="#"><i class="fa fa-lg fa-home"></i></a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Logout</a></li>
+        {% else %}
         <li><a href="#"><i class="fa fa-lg fa-home"></i></a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact Us</a></li>
         <li><a href="#">Login</a></li>
         <li><a href="#">Register</a></li>
+        {% endif %}
       </ul>
     </div>
    
@@ -76,7 +83,7 @@ Licence URI: http://www.os-templates.com/template-terms
             </ul>
           </li>
           <li><a href="#">Cart</a></li>
-          <li><a href="#">Log Out</a></li>
+          
         </ul>
       </nav>
     </header>
