--- a/web3_project/accounts/templates/accounts/login.html
+++ b/web3_project/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends "shop/base.html" %}
 {% load bootstrap3 %}
-
+{% load crispy_forms_tags %}
 {% block title_tag %}Login | {{block.super}}  {% endblock %}
 
 {% block content%}
@@ -9,11 +9,19 @@
     <h1>Login</h1>
     <form method="POST">
         {% csrf_token %}
-        {% bootstrap_form form %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4"> Create an Account</legend>
+            {{ form| crispy}}
+        </fieldset>
     <input type="submit" value="Login" class="btn btn-default">
 
 
     </form>
+<div class="border-top pt-3 mt-5">
+    <small class="text-muted">
+        No Account Yet? <a href="{% url 'signup' %}" class="ml-2"> Sign up! </a>
+    </small>
+</div>
 
 </div>
 
