--- a/web3_project/shop/templates/shop/product/detail.html
+++ b/web3_project/shop/templates/shop/product/detail.html
@@ -1,6 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
 
+{% load crispy_forms_tags %}
 {% block title %}
     {{ product.name }}
 {% endblock %}
@@ -59,12 +60,13 @@
             </article>
             <hr class="btmspace-80">
             <form action="{% url "cart:cart_add" product.id %}" method="post">
-                {{ cart_product_form }}
+                {{ cart_product_form | crispy}}
                 {% csrf_token %}
                 <input type="submit" value="Add to cart">
             </form>
         </main>
     </div>
+
 {% endblock %}
 
         
