--- a/web3_project/templates/shop/base.html
+++ b/web3_project/templates/shop/base.html
@@ -9,46 +9,45 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-{% if title %}
-    <title>Shop - {{ title }}</title>
-{% else %}
-    <title>Shop</title>
-{% endif %}
-
-{#<link href="{% static "/css/base.css" %}" rel="stylesheet">#}
-<link href="{% static "/css/layout.css" %}" rel="stylesheet" type="text/css" media="all">
+    {% if title %}
+        <title>Shop - {{ title }}</title>
+    {% else %}
+        <title>Shop</title>
+    {% endif %}
+    {% block style_page %}
+    {% endblock style_page %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="{% static "/css/layout.css" %}" rel="stylesheet" type="text/css" media="all">
 </head>
 <!--TOPHEADER-->
 <body id="top">
 <div class="wrapper row0">
-  <div id="topbar" class="hoc clear">
-    <div class="fl_left">
-      <ul class="nospace">
-        <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
-        <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
-      </ul>
+    <div id="topbar" class="hoc clear">
+        <div class="fl_left">
+            <ul class="nospace">
+                <li><i class="fa fa-phone"></i>+ 31 6 57900979</li>
+                <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+            </ul>
+        </div>
+        <div class="fl_right">
+            <ul class="nospace">
+                <li><a href="{% url 'shop:home' %}"><i class="fa fa-lg fa-home"></i></a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'signup' %}">Register</a></li>
+                {% endif %}
+            </ul>
+        </div>
+
     </div>
-    <div class="fl_right">
-      <ul class="nospace">
-        {% if user.is_authenticated %}
-        <li><a href="#"><i class="fa fa-lg fa-home"></i></a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Logout</a></li>
-        {% else %}
-        <li><a href="#"><i class="fa fa-lg fa-home"></i></a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Register</a></li>
-        {% endif %}
-      </ul>
-    </div>
-   
-  </div>
 </div>
 <!--TOPHEADER-->
 
@@ -56,119 +55,133 @@ Licence URI: http://www.os-templates.com/template-terms
 {% block top_background_wrapper %}
 
 {% endblock %}
-<!-- End Top Background Image Wrapper --> 
+<!-- End Top Background Image Wrapper -->
 <!--HEADER-->
-  <div class="wrapper row1">
+<div class="wrapper row1">
     <header id="header" class="hoc clear">
-     
-      <div id="logo" class="fl_left">
-        <h1><a href="{% url 'shop:home' %}">Shop</a></h1>
-      </div>
- 
-      <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li {% comment %}class="active"{% endcomment %}><a href="{% url 'shop:home' %}">Home</a></li>
-          <li><a class="active" href="{% url 'shop:product_list' %}">Products</a> </li>
-          <li><a class="drop" href="#">User</a>
-            <ul>
-              <li><a href="#">Level 2</a></li>
-              <li><a class="drop" href="#">Level 2 + Drop</a>
-                <ul>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Cart</a></li>
+
+        <div id="logo" class="fl_left">
+            <h1><a href="{% url 'shop:home' %}">Shop</a></h1>
+        </div>
+
+        <nav id="mainav" class="fl_right">
+            <ul class="clear">
+                <li {% comment %}class="active"{% endcomment %}><a href="{% url 'shop:home' %}">Home</a></li>
+                <li><a class="active" href="{% url 'shop:product_list' %}">Products</a></li>
+                <li><a class="drop" href="#">User</a>
+                    <ul>
+                        <li><a href="#">Level 2</a></li>
+                        <li><a class="drop" href="#">Level 2 + Drop</a>
+                            <ul>
+                                <li><a href="#">Level 3</a></li>
+                                <li><a href="#">Level 3</a></li>
+                                <li><a href="#">Level 3</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{% url 'cart:cart_detail' %}">Cart</a></li>
+                    </ul>
+                </li>
+                <li><a href="{% url 'cart:cart_detail' %}">Cart</a></li>
+
             </ul>
-          </li>
-          <li><a href="#">Cart</a></li>
-          
-        </ul>
-      </nav>
+        </nav>
     </header>
-<!--END HEADER-->
-{# <div id="pageintro" class="hoc clear">#}
-{#        <article>#}
-{#            <h2 class="heading">Quisque aliquam erat efficitur laoreet</h2>#}
-{#            <p>Nam sed vehicula  aenean dictum nec erat vel finibus.</p>#}
-{#            <footer><a class="btn" href="#">Neque elit interdum</a></footer>#}
-{#        </article>#}
-{##}
-{#    </div>#}
-{% block content %}  
-{% endblock %}
-   
-<!--FOOTER-->
-<!--FOOTER BACKGROUND IMAGE WRAPPER-->
-<div class="wrapper row4 bgded overlay" style="background-image:url({% static 'images/demo/backgrounds/03.png' %});">
-  <footer id="footer" class="hoc clear">
- 
-    <div class="one_quarter first">
-      <h6 class="title">Cras eros malesuada</h6>
-      <p>Ridiculus mus fusce nec odio ut libero vestibulum luctus quis tortor morbi vulputate tincidunt nisi eu aliquet sapien imperdiet suspendisse.</p>
-      <p>Erat eget luctus porta orci mauris volutpat nisi at ultricies accumsan cum sociis natoque penatibus magnis.</p>
-    </div>
-    <div class="one_quarter">
-      <h6 class="title">Urna sit ollicitudin</h6>
-      <ul class="nospace linklist contact">
-        <li><i class="fa fa-map-marker"></i>
-          <address>
-          Street Name &amp; Number, Town, Postcode/Zip
-          </address>
-        </li>
-        <li><i class="fa fa-phone"></i> +00 (123) 456 7890<br>
-          +00 (123) 456 7890</li>
-        <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li>
-        <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
-      </ul>
-    </div>
-    <div class="one_quarter">
-      <h6 class="title">Libero sapien rhoncus</h6>
-      <ul class="nospace linklist">
-        <li><a href="#">Primis in faucibus orci</a></li>
-        <li><a href="#">Luctus et ultrices posuere</a></li>
-        <li><a href="#">Cubilia curae aenean quis</a></li>
-        <li><a href="#">Magna in tellus suscipit</a></li>
-        <li><a href="#">Consectetur quis quis ipsum</a></li>
-      </ul>
-    </div>
-    <div class="one_quarter">
-      <h6 class="title">Cursus eleifend tempor</h6>
-      <ul class="nospace linklist">
-        <li>
-          <article>
-            <h6 class="nospace font-x1"><a href="#">Cras fermentum consequat</a></h6>
-            <time class="font-xs block btmspace-10" datetime="2045-04-06">Friday, 6<sup>th</sup> April 2045</time>
-            <p class="nospace">Est cras purus augue eget lorem vitae porta nisl cras&hellip;</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h6 class="nospace font-x1"><a href="#">Tellus purus malesuada</a></h6>
-            <time class="font-xs block btmspace-10" datetime="2045-04-05">Thursday, 5<sup>th</sup> April 2045</time>
-            <p class="nospace">Non porta quis venenatis non purus mauris fringilla velit&hellip;</p>
-          </article>
-        </li>
-      </ul>
-    </div>
-   
-  </footer>
-</div>
-<!--END FOOTER-->
 
-<div class="wrapper row5">
-  <div id="copyright" class="hoc clear">
-    <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    <!--END HEADER-->
+    {#     <div id="pageintro" class="hoc clear">#}
+    {#            <article>#}
+    {#                <h2 class="heading">Quisque aliquam erat efficitur laoreet</h2>#}
+    {#                <p>Nam sed vehicula  aenean dictum nec erat vel finibus.</p>#}
+    {#                <footer><a class="btn" href="#">Neque elit interdum</a></footer>#}
+    {#            </article>#}
+    {##}
+    {#        </div>#}
 
-  </div>
-</div>
+    {% block content %}
+    {% endblock %}
 
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="{% static '/scripts/jquery.min.js' %}"></script>
-<script src="{% static '/scripts/jquery.backtotop.js' %}"></script>
-<script src="{% static '/scripts/jquery.mobilemenu.js' %}"></script>
+    <!--FOOTER-->
+    <!--FOOTER BACKGROUND IMAGE WRAPPER-->
+    <div class="wrapper row4 bgded overlay"
+         style="background-image:url({% static 'images/demo/backgrounds/03.png' %});">
+        <footer id="footer" class="hoc clear">
+
+            <div class="one_quarter first">
+                <h6 class="title">Cras eros malesuada</h6>
+                <p>Ridiculus mus fusce nec odio ut libero vestibulum luctus quis tortor morbi vulputate tincidunt nisi
+                    eu aliquet sapien imperdiet suspendisse.</p>
+                <p>Erat eget luctus porta orci mauris volutpat nisi at ultricies accumsan cum sociis natoque penatibus
+                    magnis.</p>
+            </div>
+            <div class="one_quarter">
+                <h6 class="title">Urna sit ollicitudin</h6>
+                <ul class="nospace linklist contact">
+                    <li><i class="fa fa-map-marker"></i>
+                        <address>
+                            Street Name &amp; Number, Town, Postcode/Zip
+                        </address>
+                    </li>
+                    <li><i class="fa fa-phone"></i> +00 (123) 456 7890<br>
+                        +00 (123) 456 7890
+                    </li>
+                    <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li>
+                    <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+                </ul>
+            </div>
+            <div class="one_quarter">
+                <h6 class="title">Libero sapien rhoncus</h6>
+                <ul class="nospace linklist">
+                    <li><a href="#">Primis in faucibus orci</a></li>
+                    <li><a href="#">Luctus et ultrices posuere</a></li>
+                    <li><a href="#">Cubilia curae aenean quis</a></li>
+                    <li><a href="#">Magna in tellus suscipit</a></li>
+                    <li><a href="#">Consectetur quis quis ipsum</a></li>
+                </ul>
+            </div>
+            <div class="one_quarter">
+                <h6 class="title">Cursus eleifend tempor</h6>
+                <ul class="nospace linklist">
+                    <li>
+                        <article>
+                            <h6 class="nospace font-x1"><a href="#">Cras fermentum consequat</a></h6>
+                            <time class="font-xs block btmspace-10" datetime="2045-04-06">Friday, 6<sup>th</sup> April
+                                2045
+                            </time>
+                            <p class="nospace">Est cras purus augue eget lorem vitae porta nisl cras&hellip;</p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <h6 class="nospace font-x1"><a href="#">Tellus purus malesuada</a></h6>
+                            <time class="font-xs block btmspace-10" datetime="2045-04-05">Thursday, 5<sup>th</sup> April
+                                2045
+                            </time>
+                            <p class="nospace">Non porta quis venenatis non purus mauris fringilla velit&hellip;</p>
+                        </article>
+                    </li>
+                </ul>
+            </div>
+
+        </footer>
+    </div>
+    <!--END FOOTER-->
+
+    <div class="wrapper row5">
+        <div id="copyright" class="hoc clear">
+            <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">Domain Name</a></p>
+            <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/"
+                                               title="Free Website Templates">OS Templates</a></p>
+
+        </div>
+    </div>
+
+    <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+    <!-- JAVASCRIPTS -->
+    <script src="{% static '/scripts/jquery.min.js' %}"></script>
+    <script src="{% static '/scripts/jquery.backtotop.js' %}"></script>
+    <script src="{% static '/scripts/jquery.mobilemenu.js' %}"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
 </body>
 </html>
