--- a/web3_project/orders/templates/orders/order/create.html
+++ b/web3_project/orders/templates/orders/order/create.html
@@ -1,5 +1,6 @@
 {% extends "shop/base.html" %}
 
+{% load crispy_forms_tags %}
 {% block title %}
     Checkout
 {% endblock %}
@@ -17,8 +18,8 @@
         <p>Total: ${{ cart.get_total_price }}</p>
     </div>
     
-    <form action="." method="post" class="order-form">
-        {{ form.as_p }}
+    <form action="." method="post" class="order-form"  >
+        {{ form| crispy}}
         <p><input type="submit" value="Place order"></p>
         {% csrf_token %}
     </form>
