--- a/web3_project/accounts/templates/accounts/change.html
+++ b/web3_project/accounts/templates/accounts/change.html
@@ -7,7 +7,7 @@
 <div class="container">
 
     <h1>Change Profile</h1>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Change your Profile</legend>
